@@ -36,7 +36,7 @@ string(TOLOWER ${COMMONS_APPNAME} COMMONS_TARGET)
 
 set(VER_MAJ 9)
 set(VER_MIN 3)
-set(VER_PAT 1)
+set(VER_PAT 2)
 set(VERSION ${VER_MAJ}.${VER_MIN}.${VER_PAT})
 set(DAILY_BUILD OFF CACHE BOOL "Mark this as a daily build")
 
