@@ -171,6 +171,8 @@ namespace AkVCam
             ~IpcBridgePrivate();
 
             void updateDevices();
+            bool isServiceRunning();
+            bool isMFServiceRunning();
             bool launchService();
             inline const std::vector<DeviceControl> &controls() const;
 
@@ -777,11 +779,55 @@ void AkVCam::IpcBridgePrivate::updateDevices()
     }
 }
 
+bool AkVCam::IpcBridgePrivate::isServiceRunning()
+{
+    AkLogFunction();
+
+    AkVCam::SharedMemory serviceLock;
+    serviceLock.setName(AKVCAM_SERVICE_NAME "_Lock");
+    bool result = false;
+
+    if (serviceLock.open(1024)) {
+        if (serviceLock.lock()) {
+            result = true;
+            serviceLock.unlock();
+        }
+
+        serviceLock.close();
+    }
+
+    AkLogDebug() << "Result: " << result << std::endl;
+
+    return result;
+}
+
+bool AkVCam::IpcBridgePrivate::isMFServiceRunning()
+{
+    AkLogFunction();
+
+    AkVCam::SharedMemory serviceLock;
+    serviceLock.setName(AKVCAM_SERVICE_MF_NAME "_Lock");
+    bool result = false;
+
+    if (serviceLock.open(1024)) {
+        if (serviceLock.lock()) {
+            result = true;
+            serviceLock.unlock();
+        }
+
+        serviceLock.close();
+    }
+
+    AkLogDebug() << "Result: " << result << std::endl;
+
+    return result;
+}
+
 bool AkVCam::IpcBridgePrivate::launchService()
 {
     AkLogFunction();
 
-    if (!isServicePortUp()) {
+    if (!isServiceRunning()) {
         AkLogDebug() << "Launching the service" << std::endl;
         auto servicePath = locateServicePath();
 
@@ -789,16 +835,16 @@ bool AkVCam::IpcBridgePrivate::launchService()
             execDetached({servicePath});
         else
             AkLogDebug() << "Service path not found" << std::endl;
+    }
 
-        if (supportsMediaFoundationVCam()) {
-            AkLogDebug() << "Launching the Media Foundation service" << std::endl;
-            auto mfServicePath = locateMFServicePath();
+    if (supportsMediaFoundationVCam() && !isMFServiceRunning()) {
+        AkLogDebug() << "Launching the Media Foundation service" << std::endl;
+        auto mfServicePath = locateMFServicePath();
 
-            if (!mfServicePath.empty())
-                execDetached({mfServicePath});
-            else
-                AkLogDebug() << "Media Foundation Service path not found" << std::endl;
-        }
+        if (!mfServicePath.empty())
+            execDetached({mfServicePath});
+        else
+            AkLogDebug() << "Media Foundation Service path not found" << std::endl;
     }
 
     bool ok = false;
@@ -806,8 +852,11 @@ bool AkVCam::IpcBridgePrivate::launchService()
     AkLogDebug() << "Service check Timeout:" << timeout << std::endl;
 
     for (int i = 0; i < timeout; ++i) {
-        if (isServicePortUp())
+        if (isServicePortUp()) {
+            ok = true;
+
             break;
+        }
 
         std::this_thread::sleep_for(std::chrono::seconds(1));;
     }
